// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Chip set disabled 1`] = `
<ChipSet
  classes={Object {}}
  disabled={true}
  items={
    Array [
      Object {
        "id": "1",
        "value": "one",
      },
    ]
  }
  onRemoveItem={[Function]}
  theme={
    Object {
      "breakpoints": Object {
        "between": [Function],
        "down": [Function],
        "keys": Array [
          "xs",
          "sm",
          "md",
          "lg",
          "xl",
        ],
        "only": [Function],
        "up": [Function],
        "values": Object {
          "lg": 1280,
          "md": 960,
          "sm": 600,
          "xl": 1920,
          "xs": 0,
        },
        "width": [Function],
      },
      "direction": "ltr",
      "main": Object {
        "borderRadius": Object {
          "large": "12px",
          "medium": "8px",
          "small": "4px",
        },
        "borderStyle": Object {
          "base": "solid",
        },
        "borderWidth": Object {
          "base": "1px",
        },
        "colors": Object {
          "background": "#FFFFFF",
          "contrastText": "#AC3B61",
          "dark": "#86D1FF",
          "light": "#C5D7FD",
          "main": "#979797",
          "notification": Object {
            "error": "#F21600",
            "info": "#A9D9E4",
            "success": "#83F570",
            "warning": "#FAE639",
          },
          "text": "#161617",
        },
        "margin": Object {
          "extraLarge": "25px",
          "large": "15px",
          "medium": "10px",
          "small": "5px",
        },
        "opacity": Object {
          "disabled": 0.7,
        },
        "padding": Object {
          "extraLarge": "25px",
          "large": "15px",
          "medium": "10px",
          "small": "5px",
        },
        "timeout": Object {
          "notification": 300,
        },
        "transition": ".3s",
        "zIndex": Object {
          "notification": 1000,
        },
      },
      "mixins": Object {
        "gutters": [Function],
        "toolbar": Object {
          "@media (min-width:0px) and (orientation: landscape)": Object {
            "minHeight": 48,
          },
          "@media (min-width:600px)": Object {
            "minHeight": 64,
          },
          "minHeight": 56,
        },
      },
      "overrides": Object {
        "MuiButton": Object {
          "outlinedPrimary": Object {
            "borderColor": "#161617",
            "color": "#161617",
          },
          "root": Object {
            "&$contained&$disabled": Object {
              "color": "#FFFFFF",
            },
            "&$disabled": Object {
              "opacity": 0.7,
            },
            "&:hover": Object {
              "background": "#979797",
              "opacity": 0.7,
            },
            "borderRadius": "8px",
            "color": "#161617",
            "textTransform": "none",
            "transition": ".3s",
          },
        },
        "MuiChip": Object {
          "root": Object {
            "background": "transparent",
            "border": "1px solid #161617",
            "color": "#161617",
            "fontSize": ".9em",
            "opacity": 0.7,
          },
        },
        "MuiFormControl": Object {
          "root": Object {
            "width": "100%",
          },
        },
        "MuiFormHelperText": Object {},
        "MuiFormInput": Object {},
        "MuiInput": Object {},
        "MuiInputLabel": Object {
          "outlined": Object {
            "lineHeight": 1.5,
            "transform": "translate(25px, 15px) scale(1)",
          },
          "root": Object {
            "&$focused": Object {
              "color": "#979797",
            },
          },
        },
        "MuiLinearProgress": Object {
          "root": Object {
            "background": "#FFFFFF",
          },
        },
        "MuiMenuItem": Object {
          "root": Object {
            "&$selected": Object {
              "background": "#979797 !important",
              "color": "#FFFFFF !important",
            },
            "&:hover": Object {
              "background": "#979797 !important",
              "color": "#FFFFFF !important",
            },
            "width": "100%",
          },
        },
        "MuiOutlinedInput": Object {
          "input": Object {
            "lineHeight": 1.5,
            "padding": "15px 25px",
          },
          "notchedOutline": Object {
            "borderRadius": "8px",
          },
          "root": Object {
            "& $notchedOutline": Object {
              "borderColor": "#979797",
            },
          },
        },
        "MuiSelect": Object {
          "root": Object {
            "width": "100%",
          },
          "select": Object {
            "background": "transparent !important",
          },
        },
        "MuiSnackbar": Object {
          "anchorOriginTopRight": Object {
            "opacity": 0.9,
          },
        },
        "MuiTextField": Object {
          "root": Object {
            "width": "100%",
          },
        },
      },
      "palette": Object {
        "action": Object {
          "active": "rgba(0, 0, 0, 0.54)",
          "disabled": "rgba(0, 0, 0, 0.26)",
          "disabledBackground": "rgba(0, 0, 0, 0.12)",
          "hover": "rgba(0, 0, 0, 0.08)",
          "hoverOpacity": 0.08,
          "selected": "rgba(0, 0, 0, 0.14)",
        },
        "augmentColor": [Function],
        "background": Object {
          "default": "#fafafa",
          "paper": "#FFFFFF",
        },
        "common": Object {
          "black": "#000",
          "white": "#fff",
        },
        "contrastThreshold": 3,
        "divider": "rgba(0, 0, 0, 0.12)",
        "error": Object {
          "contrastText": "#fff",
          "dark": "#d32f2f",
          "light": "#e57373",
          "main": "#f44336",
        },
        "getContrastText": [Function],
        "grey": Object {
          "100": "#f5f5f5",
          "200": "#eeeeee",
          "300": "#e0e0e0",
          "400": "#bdbdbd",
          "50": "#fafafa",
          "500": "#9e9e9e",
          "600": "#757575",
          "700": "#616161",
          "800": "#424242",
          "900": "#212121",
          "A100": "#d5d5d5",
          "A200": "#aaaaaa",
          "A400": "#303030",
          "A700": "#616161",
        },
        "primary": Object {
          "contrastText": "#AC3B61",
          "dark": "#86D1FF",
          "light": "#C5D7FD",
          "main": "#979797",
        },
        "secondary": Object {
          "contrastText": "#AC3B61",
          "dark": "#86D1FF",
          "light": "#C5D7FD",
          "main": "#979797",
        },
        "text": Object {
          "disabled": "rgba(0, 0, 0, 0.38)",
          "hint": "rgba(0, 0, 0, 0.38)",
          "primary": "#161617",
          "secondary": "rgba(0, 0, 0, 0.54)",
        },
        "tonalOffset": 0.2,
        "type": "light",
      },
      "props": Object {},
      "shadows": Array [
        "none",
        "0px 1px 3px 0px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 2px 1px -1px rgba(0,0,0,0.12)",
        "0px 1px 5px 0px rgba(0,0,0,0.2),0px 2px 2px 0px rgba(0,0,0,0.14),0px 3px 1px -2px rgba(0,0,0,0.12)",
        "0px 1px 8px 0px rgba(0,0,0,0.2),0px 3px 4px 0px rgba(0,0,0,0.14),0px 3px 3px -2px rgba(0,0,0,0.12)",
        "0px 2px 4px -1px rgba(0,0,0,0.2),0px 4px 5px 0px rgba(0,0,0,0.14),0px 1px 10px 0px rgba(0,0,0,0.12)",
        "0px 3px 5px -1px rgba(0,0,0,0.2),0px 5px 8px 0px rgba(0,0,0,0.14),0px 1px 14px 0px rgba(0,0,0,0.12)",
        "0px 3px 5px -1px rgba(0,0,0,0.2),0px 6px 10px 0px rgba(0,0,0,0.14),0px 1px 18px 0px rgba(0,0,0,0.12)",
        "0px 4px 5px -2px rgba(0,0,0,0.2),0px 7px 10px 1px rgba(0,0,0,0.14),0px 2px 16px 1px rgba(0,0,0,0.12)",
        "0px 5px 5px -3px rgba(0,0,0,0.2),0px 8px 10px 1px rgba(0,0,0,0.14),0px 3px 14px 2px rgba(0,0,0,0.12)",
        "0px 5px 6px -3px rgba(0,0,0,0.2),0px 9px 12px 1px rgba(0,0,0,0.14),0px 3px 16px 2px rgba(0,0,0,0.12)",
        "0px 6px 6px -3px rgba(0,0,0,0.2),0px 10px 14px 1px rgba(0,0,0,0.14),0px 4px 18px 3px rgba(0,0,0,0.12)",
        "0px 6px 7px -4px rgba(0,0,0,0.2),0px 11px 15px 1px rgba(0,0,0,0.14),0px 4px 20px 3px rgba(0,0,0,0.12)",
        "0px 7px 8px -4px rgba(0,0,0,0.2),0px 12px 17px 2px rgba(0,0,0,0.14),0px 5px 22px 4px rgba(0,0,0,0.12)",
        "0px 7px 8px -4px rgba(0,0,0,0.2),0px 13px 19px 2px rgba(0,0,0,0.14),0px 5px 24px 4px rgba(0,0,0,0.12)",
        "0px 7px 9px -4px rgba(0,0,0,0.2),0px 14px 21px 2px rgba(0,0,0,0.14),0px 5px 26px 4px rgba(0,0,0,0.12)",
        "0px 8px 9px -5px rgba(0,0,0,0.2),0px 15px 22px 2px rgba(0,0,0,0.14),0px 6px 28px 5px rgba(0,0,0,0.12)",
        "0px 8px 10px -5px rgba(0,0,0,0.2),0px 16px 24px 2px rgba(0,0,0,0.14),0px 6px 30px 5px rgba(0,0,0,0.12)",
        "0px 8px 11px -5px rgba(0,0,0,0.2),0px 17px 26px 2px rgba(0,0,0,0.14),0px 6px 32px 5px rgba(0,0,0,0.12)",
        "0px 9px 11px -5px rgba(0,0,0,0.2),0px 18px 28px 2px rgba(0,0,0,0.14),0px 7px 34px 6px rgba(0,0,0,0.12)",
        "0px 9px 12px -6px rgba(0,0,0,0.2),0px 19px 29px 2px rgba(0,0,0,0.14),0px 7px 36px 6px rgba(0,0,0,0.12)",
        "0px 10px 13px -6px rgba(0,0,0,0.2),0px 20px 31px 3px rgba(0,0,0,0.14),0px 8px 38px 7px rgba(0,0,0,0.12)",
        "0px 10px 13px -6px rgba(0,0,0,0.2),0px 21px 33px 3px rgba(0,0,0,0.14),0px 8px 40px 7px rgba(0,0,0,0.12)",
        "0px 10px 14px -6px rgba(0,0,0,0.2),0px 22px 35px 3px rgba(0,0,0,0.14),0px 8px 42px 7px rgba(0,0,0,0.12)",
        "0px 11px 14px -7px rgba(0,0,0,0.2),0px 23px 36px 3px rgba(0,0,0,0.14),0px 9px 44px 8px rgba(0,0,0,0.12)",
        "0px 11px 15px -7px rgba(0,0,0,0.2),0px 24px 38px 3px rgba(0,0,0,0.14),0px 9px 46px 8px rgba(0,0,0,0.12)",
      ],
      "shape": Object {
        "borderRadius": 4,
      },
      "spacing": Object {
        "unit": 8,
      },
      "transitions": Object {
        "create": [Function],
        "duration": Object {
          "complex": 375,
          "enteringScreen": 225,
          "leavingScreen": 195,
          "short": 250,
          "shorter": 200,
          "shortest": 150,
          "standard": 300,
        },
        "easing": Object {
          "easeIn": "cubic-bezier(0.4, 0, 1, 1)",
          "easeInOut": "cubic-bezier(0.4, 0, 0.2, 1)",
          "easeOut": "cubic-bezier(0.0, 0, 0.2, 1)",
          "sharp": "cubic-bezier(0.4, 0, 0.6, 1)",
        },
        "getAutoHeightDuration": [Function],
      },
      "typography": Object {
        "body1": Object {
          "color": "#161617",
          "fontFamily": "\\"Cairo\\", sans-serif",
          "fontSize": "NaNrem",
          "fontWeight": 400,
          "lineHeight": 1.5,
        },
        "body1Next": Object {
          "color": "#161617",
          "fontFamily": "\\"Cairo\\", sans-serif",
          "fontSize": "NaNrem",
          "fontWeight": 400,
          "lineHeight": 1.5,
        },
        "body2": Object {
          "color": "#161617",
          "fontFamily": "\\"Cairo\\", sans-serif",
          "fontSize": "NaNrem",
          "fontWeight": 400,
          "lineHeight": 1.5,
        },
        "body2Next": Object {
          "color": "#161617",
          "fontFamily": "\\"Cairo\\", sans-serif",
          "fontSize": "NaNrem",
          "fontWeight": 400,
          "lineHeight": 1.5,
        },
        "button": Object {
          "color": "#161617",
          "fontFamily": "\\"Cairo\\", sans-serif",
          "fontSize": "NaNrem",
          "fontWeight": 500,
          "lineHeight": 1.75,
          "textTransform": "uppercase",
        },
        "buttonNext": Object {
          "color": "#161617",
          "fontFamily": "\\"Cairo\\", sans-serif",
          "fontSize": "NaNrem",
          "fontWeight": 500,
          "lineHeight": 1.75,
          "textTransform": "uppercase",
        },
        "caption": Object {
          "color": "#161617",
          "fontFamily": "\\"Cairo\\", sans-serif",
          "fontSize": "NaNrem",
          "fontWeight": 400,
          "lineHeight": 1.66,
        },
        "captionNext": Object {
          "color": "#161617",
          "fontFamily": "\\"Cairo\\", sans-serif",
          "fontSize": "NaNrem",
          "fontWeight": 400,
          "lineHeight": 1.66,
        },
        "display1": Object {
          "color": "rgba(0, 0, 0, 0.54)",
          "fontFamily": "\\"Cairo\\", sans-serif",
          "fontSize": "NaNrem",
          "fontWeight": 400,
          "lineHeight": "1.20588em",
        },
        "display2": Object {
          "color": "rgba(0, 0, 0, 0.54)",
          "fontFamily": "\\"Cairo\\", sans-serif",
          "fontSize": "NaNrem",
          "fontWeight": 400,
          "lineHeight": "1.13333em",
          "marginLeft": "-.02em",
        },
        "display3": Object {
          "color": "rgba(0, 0, 0, 0.54)",
          "fontFamily": "\\"Cairo\\", sans-serif",
          "fontSize": "NaNrem",
          "fontWeight": 400,
          "letterSpacing": "-.02em",
          "lineHeight": "1.30357em",
          "marginLeft": "-.02em",
        },
        "display4": Object {
          "color": "rgba(0, 0, 0, 0.54)",
          "fontFamily": "\\"Cairo\\", sans-serif",
          "fontSize": "NaNrem",
          "fontWeight": 300,
          "letterSpacing": "-.04em",
          "lineHeight": "1.14286em",
          "marginLeft": "-.04em",
        },
        "fontFamily": "\\"Cairo\\", sans-serif",
        "fontSize": "14px",
        "fontWeightLight": 300,
        "fontWeightMedium": 500,
        "fontWeightRegular": 400,
        "h1": Object {
          "color": "#161617",
          "fontFamily": "\\"Cairo\\", sans-serif",
          "fontSize": "NaNrem",
          "fontWeight": 300,
          "lineHeight": 1,
        },
        "h2": Object {
          "color": "#161617",
          "fontFamily": "\\"Cairo\\", sans-serif",
          "fontSize": "NaNrem",
          "fontWeight": 300,
          "lineHeight": 1,
        },
        "h3": Object {
          "color": "#161617",
          "fontFamily": "\\"Cairo\\", sans-serif",
          "fontSize": "NaNrem",
          "fontWeight": 400,
          "lineHeight": 1.04,
        },
        "h4": Object {
          "color": "#161617",
          "fontFamily": "\\"Cairo\\", sans-serif",
          "fontSize": "NaNrem",
          "fontWeight": 400,
          "lineHeight": 1.17,
        },
        "h5": Object {
          "color": "#161617",
          "fontFamily": "\\"Cairo\\", sans-serif",
          "fontSize": "NaNrem",
          "fontWeight": 400,
          "lineHeight": 1.33,
        },
        "h6": Object {
          "color": "#161617",
          "fontFamily": "\\"Cairo\\", sans-serif",
          "fontSize": "NaNrem",
          "fontWeight": 500,
          "lineHeight": 1.6,
        },
        "headline": Object {
          "color": "#161617",
          "fontFamily": "\\"Cairo\\", sans-serif",
          "fontSize": "NaNrem",
          "fontWeight": 400,
          "lineHeight": "1.35417em",
        },
        "overline": Object {
          "color": "#161617",
          "fontFamily": "\\"Cairo\\", sans-serif",
          "fontSize": "NaNrem",
          "fontWeight": 400,
          "lineHeight": 2.66,
          "textTransform": "uppercase",
        },
        "pxToRem": [Function],
        "round": [Function],
        "subheading": Object {
          "color": "#161617",
          "fontFamily": "\\"Cairo\\", sans-serif",
          "fontSize": "NaNrem",
          "fontWeight": 400,
          "lineHeight": "1.5em",
        },
        "subtitle1": Object {
          "color": "#161617",
          "fontFamily": "\\"Cairo\\", sans-serif",
          "fontSize": "NaNrem",
          "fontWeight": 400,
          "lineHeight": 1.75,
        },
        "subtitle2": Object {
          "color": "#161617",
          "fontFamily": "\\"Cairo\\", sans-serif",
          "fontSize": "NaNrem",
          "fontWeight": 500,
          "lineHeight": 1.57,
        },
        "title": Object {
          "color": "#161617",
          "fontFamily": "\\"Cairo\\", sans-serif",
          "fontSize": "NaNrem",
          "fontWeight": 500,
          "lineHeight": "1.16667em",
        },
        "useNextVariants": true,
      },
      "zIndex": Object {
        "appBar": 1100,
        "drawer": 1200,
        "mobileStepper": 1000,
        "modal": 1300,
        "snackbar": 1400,
        "tooltip": 1500,
      },
    }
  }
>
  <div>
    <WithStyles(Chip)
      classes={
        Object {
          "root": undefined,
        }
      }
      disabled={true}
      icon={<pure(TagFacesIcon) />}
      key="1"
      label="one"
      onDelete={[Function]}
    >
      <Chip
        classes={
          Object {
            "avatar": "MuiChip-avatar-13",
            "avatarChildren": "MuiChip-avatarChildren-16",
            "avatarColorPrimary": "MuiChip-avatarColorPrimary-14",
            "avatarColorSecondary": "MuiChip-avatarColorSecondary-15",
            "clickable": "MuiChip-clickable-4",
            "clickableColorPrimary": "MuiChip-clickableColorPrimary-5",
            "clickableColorSecondary": "MuiChip-clickableColorSecondary-6",
            "colorPrimary": "MuiChip-colorPrimary-2",
            "colorSecondary": "MuiChip-colorSecondary-3",
            "deletable": "MuiChip-deletable-7",
            "deletableColorPrimary": "MuiChip-deletableColorPrimary-8",
            "deletableColorSecondary": "MuiChip-deletableColorSecondary-9",
            "deleteIcon": "MuiChip-deleteIcon-21",
            "deleteIconColorPrimary": "MuiChip-deleteIconColorPrimary-22",
            "deleteIconColorSecondary": "MuiChip-deleteIconColorSecondary-23",
            "deleteIconOutlinedColorPrimary": "MuiChip-deleteIconOutlinedColorPrimary-24",
            "deleteIconOutlinedColorSecondary": "MuiChip-deleteIconOutlinedColorSecondary-25",
            "icon": "MuiChip-icon-17",
            "iconColorPrimary": "MuiChip-iconColorPrimary-18",
            "iconColorSecondary": "MuiChip-iconColorSecondary-19",
            "label": "MuiChip-label-20",
            "outlined": "MuiChip-outlined-10",
            "outlinedPrimary": "MuiChip-outlinedPrimary-11",
            "outlinedSecondary": "MuiChip-outlinedSecondary-12",
            "root": "MuiChip-root-1",
          }
        }
        color="default"
        component="div"
        disabled={true}
        icon={<pure(TagFacesIcon) />}
        label="one"
        onDelete={[Function]}
        variant="default"
      >
        <div
          className="MuiChip-root-1 MuiChip-deletable-7"
          disabled={true}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          role="button"
          tabIndex={0}
        >
          <pure(TagFacesIcon)
            className="MuiChip-icon-17"
          >
            <TagFacesIcon
              className="MuiChip-icon-17"
            >
              <WithStyles(SvgIcon)
                className="MuiChip-icon-17"
              >
                <SvgIcon
                  className="MuiChip-icon-17"
                  classes={
                    Object {
                      "colorAction": "MuiSvgIcon-colorAction-29",
                      "colorDisabled": "MuiSvgIcon-colorDisabled-31",
                      "colorError": "MuiSvgIcon-colorError-30",
                      "colorPrimary": "MuiSvgIcon-colorPrimary-27",
                      "colorSecondary": "MuiSvgIcon-colorSecondary-28",
                      "fontSizeInherit": "MuiSvgIcon-fontSizeInherit-32",
                      "fontSizeLarge": "MuiSvgIcon-fontSizeLarge-34",
                      "fontSizeSmall": "MuiSvgIcon-fontSizeSmall-33",
                      "root": "MuiSvgIcon-root-26",
                    }
                  }
                  color="inherit"
                  component="svg"
                  fontSize="default"
                  viewBox="0 0 24 24"
                >
                  <svg
                    aria-hidden="true"
                    className="MuiSvgIcon-root-26 MuiChip-icon-17"
                    focusable="false"
                    role="presentation"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M0 0h24v24H0z"
                      fill="none"
                    />
                    <path
                      d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8zm3.5-9c.83 0 1.5-.67 1.5-1.5S16.33 8 15.5 8 14 8.67 14 9.5s.67 1.5 1.5 1.5zm-7 0c.83 0 1.5-.67 1.5-1.5S9.33 8 8.5 8 7 8.67 7 9.5 7.67 11 8.5 11zm3.5 6.5c2.33 0 4.31-1.46 5.11-3.5H6.89c.8 2.04 2.78 3.5 5.11 3.5z"
                    />
                  </svg>
                </SvgIcon>
              </WithStyles(SvgIcon)>
            </TagFacesIcon>
          </pure(TagFacesIcon)>
          <span
            className="MuiChip-label-20"
          >
            one
          </span>
          <pure(Cancel)
            className="MuiChip-deleteIcon-21"
            onClick={[Function]}
          >
            <Cancel
              className="MuiChip-deleteIcon-21"
              onClick={[Function]}
            >
              <WithStyles(SvgIcon)
                className="MuiChip-deleteIcon-21"
                onClick={[Function]}
              >
                <SvgIcon
                  className="MuiChip-deleteIcon-21"
                  classes={
                    Object {
                      "colorAction": "MuiSvgIcon-colorAction-29",
                      "colorDisabled": "MuiSvgIcon-colorDisabled-31",
                      "colorError": "MuiSvgIcon-colorError-30",
                      "colorPrimary": "MuiSvgIcon-colorPrimary-27",
                      "colorSecondary": "MuiSvgIcon-colorSecondary-28",
                      "fontSizeInherit": "MuiSvgIcon-fontSizeInherit-32",
                      "fontSizeLarge": "MuiSvgIcon-fontSizeLarge-34",
                      "fontSizeSmall": "MuiSvgIcon-fontSizeSmall-33",
                      "root": "MuiSvgIcon-root-26",
                    }
                  }
                  color="inherit"
                  component="svg"
                  fontSize="default"
                  onClick={[Function]}
                  viewBox="0 0 24 24"
                >
                  <svg
                    aria-hidden="true"
                    className="MuiSvgIcon-root-26 MuiChip-deleteIcon-21"
                    focusable="false"
                    onClick={[Function]}
                    role="presentation"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M12 2C6.47 2 2 6.47 2 12s4.47 10 10 10 10-4.47 10-10S17.53 2 12 2zm5 13.59L15.59 17 12 13.41 8.41 17 7 15.59 10.59 12 7 8.41 8.41 7 12 10.59 15.59 7 17 8.41 13.41 12 17 15.59z"
                    />
                  </svg>
                </SvgIcon>
              </WithStyles(SvgIcon)>
            </Cancel>
          </pure(Cancel)>
        </div>
      </Chip>
    </WithStyles(Chip)>
  </div>
</ChipSet>
`;

exports[`Chip set render button 1`] = `
<ChipSet
  classes={Object {}}
  disabled={false}
  items={
    Array [
      Object {
        "id": "1",
        "value": "one",
      },
    ]
  }
  onRemoveItem={[Function]}
  theme={
    Object {
      "breakpoints": Object {
        "between": [Function],
        "down": [Function],
        "keys": Array [
          "xs",
          "sm",
          "md",
          "lg",
          "xl",
        ],
        "only": [Function],
        "up": [Function],
        "values": Object {
          "lg": 1280,
          "md": 960,
          "sm": 600,
          "xl": 1920,
          "xs": 0,
        },
        "width": [Function],
      },
      "direction": "ltr",
      "main": Object {
        "borderRadius": Object {
          "large": "12px",
          "medium": "8px",
          "small": "4px",
        },
        "borderStyle": Object {
          "base": "solid",
        },
        "borderWidth": Object {
          "base": "1px",
        },
        "colors": Object {
          "background": "#FFFFFF",
          "contrastText": "#AC3B61",
          "dark": "#86D1FF",
          "light": "#C5D7FD",
          "main": "#979797",
          "notification": Object {
            "error": "#F21600",
            "info": "#A9D9E4",
            "success": "#83F570",
            "warning": "#FAE639",
          },
          "text": "#161617",
        },
        "margin": Object {
          "extraLarge": "25px",
          "large": "15px",
          "medium": "10px",
          "small": "5px",
        },
        "opacity": Object {
          "disabled": 0.7,
        },
        "padding": Object {
          "extraLarge": "25px",
          "large": "15px",
          "medium": "10px",
          "small": "5px",
        },
        "timeout": Object {
          "notification": 300,
        },
        "transition": ".3s",
        "zIndex": Object {
          "notification": 1000,
        },
      },
      "mixins": Object {
        "gutters": [Function],
        "toolbar": Object {
          "@media (min-width:0px) and (orientation: landscape)": Object {
            "minHeight": 48,
          },
          "@media (min-width:600px)": Object {
            "minHeight": 64,
          },
          "minHeight": 56,
        },
      },
      "overrides": Object {
        "MuiButton": Object {
          "outlinedPrimary": Object {
            "borderColor": "#161617",
            "color": "#161617",
          },
          "root": Object {
            "&$contained&$disabled": Object {
              "color": "#FFFFFF",
            },
            "&$disabled": Object {
              "opacity": 0.7,
            },
            "&:hover": Object {
              "background": "#979797",
              "opacity": 0.7,
            },
            "borderRadius": "8px",
            "color": "#161617",
            "textTransform": "none",
            "transition": ".3s",
          },
        },
        "MuiChip": Object {
          "root": Object {
            "background": "transparent",
            "border": "1px solid #161617",
            "color": "#161617",
            "fontSize": ".9em",
            "opacity": 0.7,
          },
        },
        "MuiFormControl": Object {
          "root": Object {
            "width": "100%",
          },
        },
        "MuiFormHelperText": Object {},
        "MuiFormInput": Object {},
        "MuiInput": Object {},
        "MuiInputLabel": Object {
          "outlined": Object {
            "lineHeight": 1.5,
            "transform": "translate(25px, 15px) scale(1)",
          },
          "root": Object {
            "&$focused": Object {
              "color": "#979797",
            },
          },
        },
        "MuiLinearProgress": Object {
          "root": Object {
            "background": "#FFFFFF",
          },
        },
        "MuiMenuItem": Object {
          "root": Object {
            "&$selected": Object {
              "background": "#979797 !important",
              "color": "#FFFFFF !important",
            },
            "&:hover": Object {
              "background": "#979797 !important",
              "color": "#FFFFFF !important",
            },
            "width": "100%",
          },
        },
        "MuiOutlinedInput": Object {
          "input": Object {
            "lineHeight": 1.5,
            "padding": "15px 25px",
          },
          "notchedOutline": Object {
            "borderRadius": "8px",
          },
          "root": Object {
            "& $notchedOutline": Object {
              "borderColor": "#979797",
            },
          },
        },
        "MuiSelect": Object {
          "root": Object {
            "width": "100%",
          },
          "select": Object {
            "background": "transparent !important",
          },
        },
        "MuiSnackbar": Object {
          "anchorOriginTopRight": Object {
            "opacity": 0.9,
          },
        },
        "MuiTextField": Object {
          "root": Object {
            "width": "100%",
          },
        },
      },
      "palette": Object {
        "action": Object {
          "active": "rgba(0, 0, 0, 0.54)",
          "disabled": "rgba(0, 0, 0, 0.26)",
          "disabledBackground": "rgba(0, 0, 0, 0.12)",
          "hover": "rgba(0, 0, 0, 0.08)",
          "hoverOpacity": 0.08,
          "selected": "rgba(0, 0, 0, 0.14)",
        },
        "augmentColor": [Function],
        "background": Object {
          "default": "#fafafa",
          "paper": "#FFFFFF",
        },
        "common": Object {
          "black": "#000",
          "white": "#fff",
        },
        "contrastThreshold": 3,
        "divider": "rgba(0, 0, 0, 0.12)",
        "error": Object {
          "contrastText": "#fff",
          "dark": "#d32f2f",
          "light": "#e57373",
          "main": "#f44336",
        },
        "getContrastText": [Function],
        "grey": Object {
          "100": "#f5f5f5",
          "200": "#eeeeee",
          "300": "#e0e0e0",
          "400": "#bdbdbd",
          "50": "#fafafa",
          "500": "#9e9e9e",
          "600": "#757575",
          "700": "#616161",
          "800": "#424242",
          "900": "#212121",
          "A100": "#d5d5d5",
          "A200": "#aaaaaa",
          "A400": "#303030",
          "A700": "#616161",
        },
        "primary": Object {
          "contrastText": "#AC3B61",
          "dark": "#86D1FF",
          "light": "#C5D7FD",
          "main": "#979797",
        },
        "secondary": Object {
          "contrastText": "#AC3B61",
          "dark": "#86D1FF",
          "light": "#C5D7FD",
          "main": "#979797",
        },
        "text": Object {
          "disabled": "rgba(0, 0, 0, 0.38)",
          "hint": "rgba(0, 0, 0, 0.38)",
          "primary": "#161617",
          "secondary": "rgba(0, 0, 0, 0.54)",
        },
        "tonalOffset": 0.2,
        "type": "light",
      },
      "props": Object {},
      "shadows": Array [
        "none",
        "0px 1px 3px 0px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 2px 1px -1px rgba(0,0,0,0.12)",
        "0px 1px 5px 0px rgba(0,0,0,0.2),0px 2px 2px 0px rgba(0,0,0,0.14),0px 3px 1px -2px rgba(0,0,0,0.12)",
        "0px 1px 8px 0px rgba(0,0,0,0.2),0px 3px 4px 0px rgba(0,0,0,0.14),0px 3px 3px -2px rgba(0,0,0,0.12)",
        "0px 2px 4px -1px rgba(0,0,0,0.2),0px 4px 5px 0px rgba(0,0,0,0.14),0px 1px 10px 0px rgba(0,0,0,0.12)",
        "0px 3px 5px -1px rgba(0,0,0,0.2),0px 5px 8px 0px rgba(0,0,0,0.14),0px 1px 14px 0px rgba(0,0,0,0.12)",
        "0px 3px 5px -1px rgba(0,0,0,0.2),0px 6px 10px 0px rgba(0,0,0,0.14),0px 1px 18px 0px rgba(0,0,0,0.12)",
        "0px 4px 5px -2px rgba(0,0,0,0.2),0px 7px 10px 1px rgba(0,0,0,0.14),0px 2px 16px 1px rgba(0,0,0,0.12)",
        "0px 5px 5px -3px rgba(0,0,0,0.2),0px 8px 10px 1px rgba(0,0,0,0.14),0px 3px 14px 2px rgba(0,0,0,0.12)",
        "0px 5px 6px -3px rgba(0,0,0,0.2),0px 9px 12px 1px rgba(0,0,0,0.14),0px 3px 16px 2px rgba(0,0,0,0.12)",
        "0px 6px 6px -3px rgba(0,0,0,0.2),0px 10px 14px 1px rgba(0,0,0,0.14),0px 4px 18px 3px rgba(0,0,0,0.12)",
        "0px 6px 7px -4px rgba(0,0,0,0.2),0px 11px 15px 1px rgba(0,0,0,0.14),0px 4px 20px 3px rgba(0,0,0,0.12)",
        "0px 7px 8px -4px rgba(0,0,0,0.2),0px 12px 17px 2px rgba(0,0,0,0.14),0px 5px 22px 4px rgba(0,0,0,0.12)",
        "0px 7px 8px -4px rgba(0,0,0,0.2),0px 13px 19px 2px rgba(0,0,0,0.14),0px 5px 24px 4px rgba(0,0,0,0.12)",
        "0px 7px 9px -4px rgba(0,0,0,0.2),0px 14px 21px 2px rgba(0,0,0,0.14),0px 5px 26px 4px rgba(0,0,0,0.12)",
        "0px 8px 9px -5px rgba(0,0,0,0.2),0px 15px 22px 2px rgba(0,0,0,0.14),0px 6px 28px 5px rgba(0,0,0,0.12)",
        "0px 8px 10px -5px rgba(0,0,0,0.2),0px 16px 24px 2px rgba(0,0,0,0.14),0px 6px 30px 5px rgba(0,0,0,0.12)",
        "0px 8px 11px -5px rgba(0,0,0,0.2),0px 17px 26px 2px rgba(0,0,0,0.14),0px 6px 32px 5px rgba(0,0,0,0.12)",
        "0px 9px 11px -5px rgba(0,0,0,0.2),0px 18px 28px 2px rgba(0,0,0,0.14),0px 7px 34px 6px rgba(0,0,0,0.12)",
        "0px 9px 12px -6px rgba(0,0,0,0.2),0px 19px 29px 2px rgba(0,0,0,0.14),0px 7px 36px 6px rgba(0,0,0,0.12)",
        "0px 10px 13px -6px rgba(0,0,0,0.2),0px 20px 31px 3px rgba(0,0,0,0.14),0px 8px 38px 7px rgba(0,0,0,0.12)",
        "0px 10px 13px -6px rgba(0,0,0,0.2),0px 21px 33px 3px rgba(0,0,0,0.14),0px 8px 40px 7px rgba(0,0,0,0.12)",
        "0px 10px 14px -6px rgba(0,0,0,0.2),0px 22px 35px 3px rgba(0,0,0,0.14),0px 8px 42px 7px rgba(0,0,0,0.12)",
        "0px 11px 14px -7px rgba(0,0,0,0.2),0px 23px 36px 3px rgba(0,0,0,0.14),0px 9px 44px 8px rgba(0,0,0,0.12)",
        "0px 11px 15px -7px rgba(0,0,0,0.2),0px 24px 38px 3px rgba(0,0,0,0.14),0px 9px 46px 8px rgba(0,0,0,0.12)",
      ],
      "shape": Object {
        "borderRadius": 4,
      },
      "spacing": Object {
        "unit": 8,
      },
      "transitions": Object {
        "create": [Function],
        "duration": Object {
          "complex": 375,
          "enteringScreen": 225,
          "leavingScreen": 195,
          "short": 250,
          "shorter": 200,
          "shortest": 150,
          "standard": 300,
        },
        "easing": Object {
          "easeIn": "cubic-bezier(0.4, 0, 1, 1)",
          "easeInOut": "cubic-bezier(0.4, 0, 0.2, 1)",
          "easeOut": "cubic-bezier(0.0, 0, 0.2, 1)",
          "sharp": "cubic-bezier(0.4, 0, 0.6, 1)",
        },
        "getAutoHeightDuration": [Function],
      },
      "typography": Object {
        "body1": Object {
          "color": "#161617",
          "fontFamily": "\\"Cairo\\", sans-serif",
          "fontSize": "NaNrem",
          "fontWeight": 400,
          "lineHeight": 1.5,
        },
        "body1Next": Object {
          "color": "#161617",
          "fontFamily": "\\"Cairo\\", sans-serif",
          "fontSize": "NaNrem",
          "fontWeight": 400,
          "lineHeight": 1.5,
        },
        "body2": Object {
          "color": "#161617",
          "fontFamily": "\\"Cairo\\", sans-serif",
          "fontSize": "NaNrem",
          "fontWeight": 400,
          "lineHeight": 1.5,
        },
        "body2Next": Object {
          "color": "#161617",
          "fontFamily": "\\"Cairo\\", sans-serif",
          "fontSize": "NaNrem",
          "fontWeight": 400,
          "lineHeight": 1.5,
        },
        "button": Object {
          "color": "#161617",
          "fontFamily": "\\"Cairo\\", sans-serif",
          "fontSize": "NaNrem",
          "fontWeight": 500,
          "lineHeight": 1.75,
          "textTransform": "uppercase",
        },
        "buttonNext": Object {
          "color": "#161617",
          "fontFamily": "\\"Cairo\\", sans-serif",
          "fontSize": "NaNrem",
          "fontWeight": 500,
          "lineHeight": 1.75,
          "textTransform": "uppercase",
        },
        "caption": Object {
          "color": "#161617",
          "fontFamily": "\\"Cairo\\", sans-serif",
          "fontSize": "NaNrem",
          "fontWeight": 400,
          "lineHeight": 1.66,
        },
        "captionNext": Object {
          "color": "#161617",
          "fontFamily": "\\"Cairo\\", sans-serif",
          "fontSize": "NaNrem",
          "fontWeight": 400,
          "lineHeight": 1.66,
        },
        "display1": Object {
          "color": "rgba(0, 0, 0, 0.54)",
          "fontFamily": "\\"Cairo\\", sans-serif",
          "fontSize": "NaNrem",
          "fontWeight": 400,
          "lineHeight": "1.20588em",
        },
        "display2": Object {
          "color": "rgba(0, 0, 0, 0.54)",
          "fontFamily": "\\"Cairo\\", sans-serif",
          "fontSize": "NaNrem",
          "fontWeight": 400,
          "lineHeight": "1.13333em",
          "marginLeft": "-.02em",
        },
        "display3": Object {
          "color": "rgba(0, 0, 0, 0.54)",
          "fontFamily": "\\"Cairo\\", sans-serif",
          "fontSize": "NaNrem",
          "fontWeight": 400,
          "letterSpacing": "-.02em",
          "lineHeight": "1.30357em",
          "marginLeft": "-.02em",
        },
        "display4": Object {
          "color": "rgba(0, 0, 0, 0.54)",
          "fontFamily": "\\"Cairo\\", sans-serif",
          "fontSize": "NaNrem",
          "fontWeight": 300,
          "letterSpacing": "-.04em",
          "lineHeight": "1.14286em",
          "marginLeft": "-.04em",
        },
        "fontFamily": "\\"Cairo\\", sans-serif",
        "fontSize": "14px",
        "fontWeightLight": 300,
        "fontWeightMedium": 500,
        "fontWeightRegular": 400,
        "h1": Object {
          "color": "#161617",
          "fontFamily": "\\"Cairo\\", sans-serif",
          "fontSize": "NaNrem",
          "fontWeight": 300,
          "lineHeight": 1,
        },
        "h2": Object {
          "color": "#161617",
          "fontFamily": "\\"Cairo\\", sans-serif",
          "fontSize": "NaNrem",
          "fontWeight": 300,
          "lineHeight": 1,
        },
        "h3": Object {
          "color": "#161617",
          "fontFamily": "\\"Cairo\\", sans-serif",
          "fontSize": "NaNrem",
          "fontWeight": 400,
          "lineHeight": 1.04,
        },
        "h4": Object {
          "color": "#161617",
          "fontFamily": "\\"Cairo\\", sans-serif",
          "fontSize": "NaNrem",
          "fontWeight": 400,
          "lineHeight": 1.17,
        },
        "h5": Object {
          "color": "#161617",
          "fontFamily": "\\"Cairo\\", sans-serif",
          "fontSize": "NaNrem",
          "fontWeight": 400,
          "lineHeight": 1.33,
        },
        "h6": Object {
          "color": "#161617",
          "fontFamily": "\\"Cairo\\", sans-serif",
          "fontSize": "NaNrem",
          "fontWeight": 500,
          "lineHeight": 1.6,
        },
        "headline": Object {
          "color": "#161617",
          "fontFamily": "\\"Cairo\\", sans-serif",
          "fontSize": "NaNrem",
          "fontWeight": 400,
          "lineHeight": "1.35417em",
        },
        "overline": Object {
          "color": "#161617",
          "fontFamily": "\\"Cairo\\", sans-serif",
          "fontSize": "NaNrem",
          "fontWeight": 400,
          "lineHeight": 2.66,
          "textTransform": "uppercase",
        },
        "pxToRem": [Function],
        "round": [Function],
        "subheading": Object {
          "color": "#161617",
          "fontFamily": "\\"Cairo\\", sans-serif",
          "fontSize": "NaNrem",
          "fontWeight": 400,
          "lineHeight": "1.5em",
        },
        "subtitle1": Object {
          "color": "#161617",
          "fontFamily": "\\"Cairo\\", sans-serif",
          "fontSize": "NaNrem",
          "fontWeight": 400,
          "lineHeight": 1.75,
        },
        "subtitle2": Object {
          "color": "#161617",
          "fontFamily": "\\"Cairo\\", sans-serif",
          "fontSize": "NaNrem",
          "fontWeight": 500,
          "lineHeight": 1.57,
        },
        "title": Object {
          "color": "#161617",
          "fontFamily": "\\"Cairo\\", sans-serif",
          "fontSize": "NaNrem",
          "fontWeight": 500,
          "lineHeight": "1.16667em",
        },
        "useNextVariants": true,
      },
      "zIndex": Object {
        "appBar": 1100,
        "drawer": 1200,
        "mobileStepper": 1000,
        "modal": 1300,
        "snackbar": 1400,
        "tooltip": 1500,
      },
    }
  }
>
  <div>
    <WithStyles(Chip)
      classes={
        Object {
          "root": undefined,
        }
      }
      disabled={false}
      icon={<pure(TagFacesIcon) />}
      key="1"
      label="one"
      onDelete={[Function]}
    >
      <Chip
        classes={
          Object {
            "avatar": "MuiChip-avatar-13",
            "avatarChildren": "MuiChip-avatarChildren-16",
            "avatarColorPrimary": "MuiChip-avatarColorPrimary-14",
            "avatarColorSecondary": "MuiChip-avatarColorSecondary-15",
            "clickable": "MuiChip-clickable-4",
            "clickableColorPrimary": "MuiChip-clickableColorPrimary-5",
            "clickableColorSecondary": "MuiChip-clickableColorSecondary-6",
            "colorPrimary": "MuiChip-colorPrimary-2",
            "colorSecondary": "MuiChip-colorSecondary-3",
            "deletable": "MuiChip-deletable-7",
            "deletableColorPrimary": "MuiChip-deletableColorPrimary-8",
            "deletableColorSecondary": "MuiChip-deletableColorSecondary-9",
            "deleteIcon": "MuiChip-deleteIcon-21",
            "deleteIconColorPrimary": "MuiChip-deleteIconColorPrimary-22",
            "deleteIconColorSecondary": "MuiChip-deleteIconColorSecondary-23",
            "deleteIconOutlinedColorPrimary": "MuiChip-deleteIconOutlinedColorPrimary-24",
            "deleteIconOutlinedColorSecondary": "MuiChip-deleteIconOutlinedColorSecondary-25",
            "icon": "MuiChip-icon-17",
            "iconColorPrimary": "MuiChip-iconColorPrimary-18",
            "iconColorSecondary": "MuiChip-iconColorSecondary-19",
            "label": "MuiChip-label-20",
            "outlined": "MuiChip-outlined-10",
            "outlinedPrimary": "MuiChip-outlinedPrimary-11",
            "outlinedSecondary": "MuiChip-outlinedSecondary-12",
            "root": "MuiChip-root-1",
          }
        }
        color="default"
        component="div"
        disabled={false}
        icon={<pure(TagFacesIcon) />}
        label="one"
        onDelete={[Function]}
        variant="default"
      >
        <div
          className="MuiChip-root-1 MuiChip-deletable-7"
          disabled={false}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          role="button"
          tabIndex={0}
        >
          <pure(TagFacesIcon)
            className="MuiChip-icon-17"
          >
            <TagFacesIcon
              className="MuiChip-icon-17"
            >
              <WithStyles(SvgIcon)
                className="MuiChip-icon-17"
              >
                <SvgIcon
                  className="MuiChip-icon-17"
                  classes={
                    Object {
                      "colorAction": "MuiSvgIcon-colorAction-29",
                      "colorDisabled": "MuiSvgIcon-colorDisabled-31",
                      "colorError": "MuiSvgIcon-colorError-30",
                      "colorPrimary": "MuiSvgIcon-colorPrimary-27",
                      "colorSecondary": "MuiSvgIcon-colorSecondary-28",
                      "fontSizeInherit": "MuiSvgIcon-fontSizeInherit-32",
                      "fontSizeLarge": "MuiSvgIcon-fontSizeLarge-34",
                      "fontSizeSmall": "MuiSvgIcon-fontSizeSmall-33",
                      "root": "MuiSvgIcon-root-26",
                    }
                  }
                  color="inherit"
                  component="svg"
                  fontSize="default"
                  viewBox="0 0 24 24"
                >
                  <svg
                    aria-hidden="true"
                    className="MuiSvgIcon-root-26 MuiChip-icon-17"
                    focusable="false"
                    role="presentation"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M0 0h24v24H0z"
                      fill="none"
                    />
                    <path
                      d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8zm3.5-9c.83 0 1.5-.67 1.5-1.5S16.33 8 15.5 8 14 8.67 14 9.5s.67 1.5 1.5 1.5zm-7 0c.83 0 1.5-.67 1.5-1.5S9.33 8 8.5 8 7 8.67 7 9.5 7.67 11 8.5 11zm3.5 6.5c2.33 0 4.31-1.46 5.11-3.5H6.89c.8 2.04 2.78 3.5 5.11 3.5z"
                    />
                  </svg>
                </SvgIcon>
              </WithStyles(SvgIcon)>
            </TagFacesIcon>
          </pure(TagFacesIcon)>
          <span
            className="MuiChip-label-20"
          >
            one
          </span>
          <pure(Cancel)
            className="MuiChip-deleteIcon-21"
            onClick={[Function]}
          >
            <Cancel
              className="MuiChip-deleteIcon-21"
              onClick={[Function]}
            >
              <WithStyles(SvgIcon)
                className="MuiChip-deleteIcon-21"
                onClick={[Function]}
              >
                <SvgIcon
                  className="MuiChip-deleteIcon-21"
                  classes={
                    Object {
                      "colorAction": "MuiSvgIcon-colorAction-29",
                      "colorDisabled": "MuiSvgIcon-colorDisabled-31",
                      "colorError": "MuiSvgIcon-colorError-30",
                      "colorPrimary": "MuiSvgIcon-colorPrimary-27",
                      "colorSecondary": "MuiSvgIcon-colorSecondary-28",
                      "fontSizeInherit": "MuiSvgIcon-fontSizeInherit-32",
                      "fontSizeLarge": "MuiSvgIcon-fontSizeLarge-34",
                      "fontSizeSmall": "MuiSvgIcon-fontSizeSmall-33",
                      "root": "MuiSvgIcon-root-26",
                    }
                  }
                  color="inherit"
                  component="svg"
                  fontSize="default"
                  onClick={[Function]}
                  viewBox="0 0 24 24"
                >
                  <svg
                    aria-hidden="true"
                    className="MuiSvgIcon-root-26 MuiChip-deleteIcon-21"
                    focusable="false"
                    onClick={[Function]}
                    role="presentation"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M12 2C6.47 2 2 6.47 2 12s4.47 10 10 10 10-4.47 10-10S17.53 2 12 2zm5 13.59L15.59 17 12 13.41 8.41 17 7 15.59 10.59 12 7 8.41 8.41 7 12 10.59 15.59 7 17 8.41 13.41 12 17 15.59z"
                    />
                  </svg>
                </SvgIcon>
              </WithStyles(SvgIcon)>
            </Cancel>
          </pure(Cancel)>
        </div>
      </Chip>
    </WithStyles(Chip)>
  </div>
</ChipSet>
`;
